Lots of refactoring.  Currently setup for development.  Don't use for real

--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,7 @@ MeasurementRate=100
 [Pressure]
 Type=BME280
 MeasurementRate=10
+SyncSamplingToGPS=1
 
 [Logging]
-SyncTimeToGPS=1
 UseUniqueFilenames=1
