Updated ini file proessing.  All seems to be working.

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,13 @@
 [GPS]
 Type=Neo8m
 InitialBaudRate=9600
-SyncTimeToGPS=1
-DoBaudRateChange=1
 BaudRate=115200
-DoHighFixRate=1
-ChangeBaudRateCommand=00000000
-HighFixRateCommand=00000000
+SyncTimeToGPS=1
+SetHighBaudRate=1
+SetHighFixRate=1
+HighBaudRateCommand=00000000
+HighFixRateCommand=11111111
+KinematicsFilterCommand=22222222
 
 [Accelerometer]
 Type=ADXL345
